--- a/Tutorlink/src/pages/auth/Register.css
+++ b/Tutorlink/src/pages/auth/Register.css
@@ -16,7 +16,8 @@
     
   }
   .register-header {
-    text-align: center;
+    text-align: left;
+    padding-bottom: 10px;
    
   }
   .brand {
@@ -50,12 +51,12 @@
   .register-form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    
   }
   .form-group {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    
   }
   .form-group label {
     font-size: 0.875rem;
@@ -149,7 +150,7 @@
     transition: all 0.2s;
     border: none;
     cursor: pointer;
-    width: 450px;
+    width: 420px;
   }
   .register-button:hover {
     background-color: #7c74db;
